# flask-blog-api

./: README.md  pyproject.toml  render-deploy.sh
migrations/versions/: 4b839b563dec_adicao_do_campo_actived_na_tabela_users.py  7cab4778f9c3_add_role_table.py  bf4f79135205_add_password_column_to_user.py  c3311f2d829f_initial_migration.py
src/: __init__.py  app.py  config.py  db.py  schemas.py  utils.py
src/controllers/: auth.py  post.py  role.py  user.py
src/models/: __init__.py  post.py  role.py  user.py
src/views/: role.py  user.py
tests/unit/: test_app.py  test_user_model.py  test_utils.py
tests/unit/integration/: conftest.py  test_app_routes.py  test_portfolio_flow.py
tests/unit/integration/controllers/: test_auth.py  test_post.py  test_role.py  test_user.py
