[project]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = [
    {name = "uilliambruno-droid",email = "uilliambruno@gmail.com"}
]
requires-python = ">=3.14,<4"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy",
    "flask-migrate",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "pytest",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
]

# pytest.toml or .pytest.toml
[pytest]
addopts = ["-ra", "-q"]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
